@@ -1,24 +1,19 @@
 package study.security.controller;
 
 import lombok.RequiredArgsConstructor;
-import org.apache.poi.ss.usermodel.*;
-import org.apache.poi.xssf.streaming.SXSSFWorkbook;
-import org.apache.poi.xssf.usermodel.DefaultIndexedColorMap;
-import org.apache.poi.xssf.usermodel.XSSFCellStyle;
-import org.apache.poi.xssf.usermodel.XSSFColor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
-import study.security.dto.AccountDto;
 import study.security.dto.post.PostDetailDto;
 import study.security.excel.OneSheetExcelFile;
-import study.security.service.AccountService;
 import study.security.service.PostService;
 
 import javax.servlet.http.HttpServletResponse;
-import java.awt.Color;
 import java.io.IOException;
 import java.net.URLEncoder;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
 
 @RequiredArgsConstructor
 @Controller
@@ -42,27 +37,25 @@ public class MyController {
 
     @GetMapping("/excel")
     public void downloadExcelFile(HttpServletResponse response) throws IOException {
-        // 엑셀 렌더링에 필요한 DTO를 가져옵니다.
-        List<PostDetailDto> posts = postService.findAll();
+        OneSheetExcelFile<PostDetailDto> excelFile = new OneSheetExcelFile<>(PostDetailDto.class);
+        Pageable pageable = PageRequest.of(1, 100);
 
-        OneSheetExcelFile<PostDetailDto> excelFile = new OneSheetExcelFile<>(posts, PostDetailDto.class);
+        Page<PostDetailDto> postPageObj;
+        do {
+            // 엑셀 렌더링에 필요한 데이터가 담겨있는 Page<PostDetailDto>를 받아옵니다.
+            postPageObj = postService.findAll(pageable);
 
-        String filename = URLEncoder.encode("게시글 정보", "UTF-8");
+            // 받아온 데이터를 기반으로 엑셀에 새로운 row를 추가 합니다.
+            excelFile.addRows(postPageObj.getContent());
+
+            // 다음 페이지를 요청하는 pageable 객체를 세팅합니다.
+            pageable = pageable.next();
+        } while ((postPageObj.hasNext()));
+
+        String filename = URLEncoder.encode("게시글 정보", StandardCharsets.UTF_8);
         response.setContentType("application/vnd.ms-excel");
         response.setHeader("Content-Disposition", String.format("attachment;filename=%s.xlsx", filename));
 
         excelFile.write(response.getOutputStream());
-    }
-
-    private void applyCellStyle(CellStyle cellStyle, Color color) {
-        XSSFCellStyle xssfCellStyle = (XSSFCellStyle) cellStyle;
-        xssfCellStyle.setFillForegroundColor(new XSSFColor(color, new DefaultIndexedColorMap()));
-        cellStyle.setFillPattern(FillPatternType.SOLID_FOREGROUND);
-        cellStyle.setAlignment(HorizontalAlignment.CENTER);
-        cellStyle.setVerticalAlignment(VerticalAlignment.CENTER);
-        cellStyle.setBorderLeft(BorderStyle.THIN);
-        cellStyle.setBorderTop(BorderStyle.THIN);
-        cellStyle.setBorderRight(BorderStyle.THIN);
-        cellStyle.setBorderBottom(BorderStyle.THIN);
     }
 }
